--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "firebase": "^9.2.0",
+    "nanoid": "^3.1.30",
     "vue": "^3.2.13"
   },
   "devDependencies": {
